# Rosbot

./: .$CLI and json flowchart.drawio.bkp  .$CLI and json flowchart.drawio.dtmp  .$architecture.drawio.bkp  .$architecture.drawio.dtmp  .$invertedPendulumModelling.drawio.bkp  .gitignore  CLI and json flowchart.drawio  CMakeLists.txt  GUI refactor.drawio  PIDcontroller.drawio  README.md  architecture.drawio  cli.sh  comms.drawio  compile.txt  invertedPendulumModelling.drawio  platformio.ini  run-tests.sh
MATLAB/: DC_motor_modelling.m  IP_state_space.m  IP_with_motor_model.m  Inverted_Pendulum_Gain_matrix_calculation.m  Pend_Model.slx.autosave  Pendulum_modelling.m  SISO_IP_control.m  damped_harmonic_oscillator.m  inverted_pendulum_modelling.m
datasets/: 2024-01-06_14-46-48-mbed.csv  2024-01-06_19-52-51-mbed.csv  2024-01-06_19-53-00-pendulum.csv  2024-01-21_19-19-11-pendulum.csv  2024-01-21_19-19-11-pendulum.xlsx  2024-03-03_16-58-04-packet-8-mbed.csv  2024-03-03_16-58-05-pendulum.csv  2024-03-09_13-38-41-packet-8-mbed.csv  2024-03-11_21-51-05-packet-8-mbed.csv  2024-03-11_21-51-07-pendulum.csv  EncoderVSRotations.xlsx  pendulum-model-template.xlsx
datasets/2024-01-06_14-43-00/: 2024-01-06_17-42-59-mbed.csv  2024-01-06_17-43-05-pendulum.csv  pendulum-model-template.xlsx
include/: AS5600.h  I2CInterface.h  IMU.h  RadioInterface.h  Rosbot.h  utility.h
legacy/: AS5600.cpp  AS5600.h  I2CInterface.cpp  I2CInterface.h  encoder_shared.h
scripts/: gui_demo.py  logger.py  model_capture.py  sampleText.txt  test_data.csv  test_data.xlsx
src/: AS5600.cpp  I2CInterface.cpp  IMU.cpp  RadioInterface.cpp  Rosbot.cpp  cli_main.cpp  main.cpp  utility.cpp
test/: test_circular_queue.cpp  test_comms.cpp  test_control.cpp  test_encoder_calculation.cpp  test_main.cpp  test_math.cpp  test_packet_serializer.cpp  test_state_space_controller.cpp
(+143 files in other folders)
